# PlayGround

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/: core.h
core/src/: core.cpp
tests/: CMakeLists.txt  test_app.cpp
